--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 					<div class="block6__title title">Over 1000 designers are using ...</div>
 					<div class="block6__text">30 days free trial for all.</div>
 					<div class="block6__form form-block6">
-						<form action="" method="post">
+						<form action="" method="get">
 							<input type="text" name="full-name" placeholder="FULL NAME">
 							<input type="email" name="email" placeholder="YOUR EMAIL">
 							<input type="password" name="password" placeholder="PASSWORD">
